Clean up SonarQube/SonarLint findings in commons, console-ui FreeMarker, and datatables modules
Real fixes: restricted-identifier renames, method references, entrySet
iteration instead of keySet+get, corrected assert argument order,
parameterized/deduplicated tests, removal of unthrown declared throws,
single-throw lambda refactors for assertThrows, reduced regex backtracking,
toList() over collect(Collectors.toList()), deduplicated literal constants,
and null-to-empty-collection returns.

Suppress-with-rationale (intentional design, not bugs): process-lifetime
ThreadLocals, API-hiding factory methods, GC/timing test helpers, and
reflection-target fixtures.

Also corrects a suppression on ObjectUtils_Coverage_Test (java:S1481 ->
java:S1854) so it actually matches the dead-store finding on the
checkcast-triggering local variable.